# ColumnarEngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
sandbox/: CMakeLists.txt  main.cpp
script/: build.sh  convert.sh  run_query.sh  setup.sh
scripts/: build.sh  convert.sh  run_query.sh
src/: CMakeLists.txt
src/core/: CMakeLists.txt  Engine 2.cpp  Engine 2.h  Engine.cpp  Engine.h  Pipeline 2.cpp  Pipeline.cpp  Pipeline.h  ProjectionBuilder 2.h  ProjectionBuilder.cpp
src/data_sructures/: CMakeLists.txt  Scheme.h
src/data_structures/: Batch.cpp  Batch.h  Butch.cpp  Butch.h  ByteVector 2.cpp  ByteVector.cpp  ByteVector.h  CMakeLists.txt  Column 2.h  Column.cpp  Column.h  MetaData 2.cpp  MetaData.h  Metadata.cpp  Scheme.cpp  Scheme.h
src/io/: BatchScanner.h  ButchScanner.h  CMakeLists.txt  CSVReader.cpp  CSVReader.h  CSVWriter.cpp  CSVWriter.h  ColumnarReader.cpp  ColumnarReader.h  ColumnarWriter.cpp  ColumnarWriter.h  CsvReader.cpp  CsvReader.h  CsvWriter.cpp  CsvWriter.h  IOScanner.cpp  IOScanner.h  IoScanner.cpp  IoScanner.h  Scanner.cpp  Scanner.h  VectorScanner.cpp  VectorScanner.h
src/operations/: Aggregations.cpp  Aggregations.h  CMakeLists.txt  Operations 2.h  Operations.cpp  Operations.h
src/utils/: CMakeLists.txt  HitsColumns 2.h  StringConverter 2.cpp  StringConverter.cpp  StringConverter.h
tests/: CMakeLists 2.txt  CMakeLists.txt
tests/core/: test_engine 2.cpp  test_engine.cpp  test_hits_e2e.cpp  test_projection_builder.cpp
tests/data_structures/: test_byte_vector.cpp  test_columns_scheme_batch.cpp  test_columns_scheme_butch.cpp  test_data_structures.cpp
tests/io/: test_columnar_io.cpp  test_csv_io 2.cpp  test_csv_io.cpp  test_csv_reader.cpp  test_csv_writer.cpp
tests/kt1_tests/: main_test.cpp
tests/operations/: test_aggregations.cpp
tests/simple_tests/: test_class_usage.cpp
tests/utils/: test_hits_columns 2.cpp  test_hits_columns.cpp  test_string_converter.cpp
